# pico-args

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml
examples/: app.rs  dash_dash.rs  in-depth.rs  rat.rs
examples/clap-app/: Cargo.toml
examples/gumdrop-app/: app.rs
examples/null-app/: Cargo.toml
examples/pico-args-app/: Cargo.toml
examples/structopt-app/: app.rs
src/: lib.rs
test-apps/argh-app/: Cargo.toml  app.rs
test-apps/clap-app/: Cargo.toml  app.rs
test-apps/gumdrop-app/: Cargo.toml  app.rs
test-apps/null-app/: Cargo.toml
test-apps/pico-args-app/: Cargo.toml  app.rs
test-apps/structopt-app/: Cargo.toml  app.rs
tests/: tests.rs
