[package]
name = "pico-args"
version = "0.5.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
edition = "2018"
keywords = ["args", "cli"]
license = "MIT"
description = "An ultra simple CLI arguments parser."
repository = "https://github.com/RazrFalcon/pico-args"
documentation = "https://docs.rs/pico-args/"
readme = "README.md"
exclude = ["test-apps/**"]

[features]
default = []
eq-separator = []
combined-flags = []
short-space-opt = []
